--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/dewanwakilahmed/file-uploader-react-express-traversy-media/issues"
   },
-  "homepage": "https://github.com/dewanwakilahmed/file-uploader-react-express-traversy-media#readme"
+  "homepage": "https://github.com/dewanwakilahmed/file-uploader-react-express-traversy-media#readme",
+  "dependencies": {
+    "express": "^4.17.3",
+    "express-fileupload": "^1.3.1"
+  },
+  "devDependencies": {
+    "concurrently": "^7.1.0",
+    "nodemon": "^2.0.15"
+  }
 }
